# napari-zooniverse

./: README.md  setup.cfg  tox.ini
src/napari_zooniverse/: __init__.py  _preprocess_widget.py  _upload_widget.py  _utils.py  _visualise_classification_widget.py  _widget.py  napari.yaml
src/napari_zooniverse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/napari_zooniverse/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
